Remove warning stripes around CW input
It looks better without these and quite frankly, I think they were a bad idea and discourage usage of CWs.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/compose_form.scss
+++ b/app/javascript/flavours/polyam/styles/components/compose_form.scss
@@ -183,7 +183,8 @@
     align-items: stretch;
 
     &__border {
-      background: url('~images/warning-stripes.svg') repeat-y;
+      // Polyam: Don't show stripes. Keep same as input
+      background: mix($ui-base-color, $ui-highlight-color, 85%);
       width: 5px;
       flex: 0 0 auto;
 
