[Polyam] Fix the regression with the search icon position
Port edfc53856f03e3948c2c6760bb425f74dbb24178 to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/search.scss
+++ b/app/javascript/flavours/polyam/styles/components/search.scss
@@ -154,6 +154,7 @@
     color: $darker-text-color;
     cursor: default;
     pointer-events: none;
+    margin-inline-start: 16px - 2px;
 
     &.active {
       pointer-events: auto;
