Create mixin for column and drawer class
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/_mixins.scss
+++ b/app/javascript/flavours/polyam/styles/components/_mixins.scss
@@ -119,3 +119,9 @@
     text-decoration: underline;
   }
 }
+
+// Mixin for upstream's .column, .drawer class
+@mixin column-drawer() {
+  flex: 1 1 100%;
+  overflow: hidden;
+}
