--- a/app/javascript/flavours/polyam/styles/components/columns.scss
+++ b/app/javascript/flavours/polyam/styles/components/columns.scss
@@ -161,10 +161,9 @@ $ui-header-height: 55px;
   height: 100%;
 }
 
-.column,
-.drawer {
-  flex: 1 1 100%;
-  overflow: hidden;
+// Polyam: Split from .column, .drawer
+.column {
+  @include column-drawer;
 }
 
 @media screen and (width >= 631px) {
