Create mixin for panel button
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/_mixins.scss
+++ b/app/javascript/flavours/polyam/styles/components/_mixins.scss
@@ -125,3 +125,9 @@
   flex: 1 1 100%;
   overflow: hidden;
 }
+
+// Mixin for upstream's .account--panel__button, .detailed-status__button
+@mixin panel-button() {
+  flex: 1 1 auto;
+  text-align: center;
+}
