Create mixins for notification classes
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/notification.scss
+++ b/app/javascript/flavours/polyam/styles/components/notification.scss
@@ -149,8 +149,14 @@
   }
 }
 
-// .notification__filter-bar, .account__section-headline (Moved to account.scss)
+// Polyam: Split from .notification__filter-bar, .account__section-headline
+.notification__filter-bar {
+  @include filter-bar;
+}
 
-// .notification, status (duplicate upstream, Merged with same class in status.scss)
+// Polyam: Split from .notification, .status__wrapper
+.notification {
+  @include notification-status-wrapper;
+}
 
 // .notifications-permission-banner (Moved to columns.scss)
