--- a/app/javascript/flavours/polyam/styles/components/accounts.scss
+++ b/app/javascript/flavours/polyam/styles/components/accounts.scss
@@ -356,49 +356,9 @@ a.account__display-name {
   }
 }
 
-.notification__filter-bar,
+// Polyam: Split from .notification__filter-bar, .account__section-headline
 .account__section-headline {
-  // deliberate glitch-soc choice for now
-  background: darken($ui-base-color, 4%);
-  border-bottom: 1px solid lighten($ui-base-color, 8%);
-  cursor: default;
-  display: flex;
-  flex-shrink: 0;
-
-  button {
-    background: transparent;
-    border: 0;
-    margin: 0;
-  }
-
-  button,
-  a {
-    display: block;
-    flex: 1 1 auto;
-    color: $darker-text-color;
-    padding: 15px 0;
-    font-size: 14px;
-    font-weight: 500;
-    text-align: center;
-    text-decoration: none;
-    position: relative;
-
-    &.active {
-      color: $primary-text-color;
-
-      &::before {
-        display: block;
-        content: '';
-        position: absolute;
-        bottom: -1px;
-        left: 0;
-        width: 100%;
-        height: 3px;
-        border-radius: 4px;
-        background: $highlight-text-color;
-      }
-    }
-  }
+  @include filter-bar;
 }
 
 .moved-account-banner,
