--- a/app/javascript/flavours/polyam/styles/components/status.scss
+++ b/app/javascript/flavours/polyam/styles/components/status.scss
@@ -1035,22 +1035,9 @@ a.status-card {
   }
 }
 
-.notification,
+// Polyam: Split from .notifaction, .status__wrapper
 .status__wrapper {
-  position: relative;
-
-  &.unread {
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      inset-inline-start: 0;
-      width: 100%;
-      height: 100%;
-      border-inline-start: 4px solid $highlight-text-color;
-      pointer-events: none;
-    }
-  }
+  @include notification-status-wrapper;
 }
 
 .picture-in-picture {
