--- a/app/javascript/flavours/polyam/styles/components/accounts.scss
+++ b/app/javascript/flavours/polyam/styles/components/accounts.scss
@@ -184,6 +184,21 @@ a .account__avatar {
   margin-inline-end: 10px;
 }
 
+// Polyam: Split from .status__display-name, .status__relative-time, .detailed-statuse__display-name etc. class
+.account__display-name {
+  @include no-text-decoration;
+}
+
+// Polyam: Split from .status__display-name, .acocunt__display-name class
+.account__display-name {
+  @include display-name-primary-color;
+}
+
+// Polyam: Split from .status__display-name, .detailed-status__display-name, a.account__display-name
+a.account__display-name {
+  @include underline-display-name-on-hover;
+}
+
 .account__display-name .display-name strong {
   display: block;
   overflow: hidden;
@@ -214,10 +229,9 @@ a .account__avatar {
   padding: 10px 0;
 }
 
-.account--panel__button,
-.detailed-status__button {
-  flex: 1 1 auto;
-  text-align: center;
+// Polyam: Split from .account--panel__button, .detailed-status__button
+.account--panel__button {
+  @include panel-button;
 }
 
 .relationship-tag {
@@ -342,49 +356,9 @@ a .account__avatar {
   }
 }
 
-.notification__filter-bar,
+// Polyam: Split from .notification__filter-bar, .account__section-headline
 .account__section-headline {
-  // deliberate glitch-soc choice for now
-  background: darken($ui-base-color, 4%);
-  border-bottom: 1px solid lighten($ui-base-color, 8%);
-  cursor: default;
-  display: flex;
-  flex-shrink: 0;
-
-  button {
-    background: transparent;
-    border: 0;
-    margin: 0;
-  }
-
-  button,
-  a {
-    display: block;
-    flex: 1 1 auto;
-    color: $darker-text-color;
-    padding: 15px 0;
-    font-size: 14px;
-    font-weight: 500;
-    text-align: center;
-    text-decoration: none;
-    position: relative;
-
-    &.active {
-      color: $primary-text-color;
-
-      &::before {
-        display: block;
-        content: '';
-        position: absolute;
-        bottom: -1px;
-        left: 0;
-        width: 100%;
-        height: 3px;
-        border-radius: 4px;
-        background: $highlight-text-color;
-      }
-    }
-  }
+  @include filter-bar;
 }
 
 .moved-account-banner,
