--- a/app/javascript/flavours/polyam/styles/components/status.scss
+++ b/app/javascript/flavours/polyam/styles/components/status.scss
@@ -6,96 +6,9 @@
   clear: both;
 }
 
-// Polyam: Split out from .status__content, .reply-indicator__content upstream
-// Polyam: Changes here also need to be applied to compose-form.scss
+// Polyam: Split out from .status__content, .edit-indicator__content, .reply-indicator__content upstream
 .status__content {
-  position: relative;
-  word-wrap: break-word;
-  font-weight: 400;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  font-size: 15px;
-  line-height: 20px;
-  padding-top: 2px;
-  color: $primary-text-color;
-
-  &:focus {
-    outline: 0;
-  }
-
-  .emojione {
-    width: 20px;
-    height: 20px;
-    margin: -3px 0 0;
-  }
-
-  p,
-  pre {
-    margin-bottom: 20px;
-    white-space: pre-wrap;
-    unicode-bidi: plaintext;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-
-  a {
-    color: $secondary-text-color;
-    text-decoration: none;
-    unicode-bidi: isolate;
-
-    &:hover {
-      text-decoration: underline;
-    }
-
-    &.mention {
-      &:hover {
-        text-decoration: none;
-
-        span {
-          text-decoration: underline;
-        }
-      }
-    }
-  }
-
-  a.unhandled-link {
-    color: $highlight-text-color;
-
-    .link-origin-tag {
-      color: $gold-star;
-      font-size: 0.8em;
-    }
-  }
-
-  .status__content__spoiler-link {
-    background: $action-button-color;
-
-    &:hover,
-    &:focus {
-      background: lighten($action-button-color, 7%);
-      text-decoration: none;
-    }
-
-    &::-moz-focus-inner {
-      border: 0;
-    }
-
-    &::-moz-focus-inner,
-    &:focus,
-    &:active {
-      outline: 0 !important;
-    }
-  }
-
-  .status__content__spoiler {
-    display: none;
-
-    &.status__content__spoiler--visible {
-      display: block;
-    }
-  }
+  @include status-content;
 }
 
 .status__content {
@@ -706,20 +619,18 @@
   line-height: 18px;
 }
 
+// Polyam: Split from class also containing .account__display-name
 .status__display-name,
 .status__relative-time,
 .detailed-status__display-name,
 .detailed-status__datetime,
-.detailed-status__application,
-.account__display-name {
-  text-decoration: none;
+.detailed-status__application {
+  @include no-text-decoration;
 }
 
-.status__display-name,
-.account__display-name {
-  .display-name strong {
-    color: $primary-text-color;
-  }
+// Polyam: Split from class also containing .account__display-name
+.status__display-name {
+  @include display-name-primary-color;
 }
 
 .muted {
@@ -728,12 +639,10 @@
   }
 }
 
+// Polyam: Split from class also containing a.account__display-name
 .status__display-name,
-.detailed-status__display-name,
-a.account__display-name {
-  &:hover .display-name strong {
-    text-decoration: underline;
-  }
+.detailed-status__display-name {
+  @include underline-display-name-on-hover;
 }
 
 .detailed-status__application,
@@ -1053,6 +962,11 @@ a.status-card {
   width: 100%;
 }
 
+// Polyam: Split from .account--panel__button, .detailed-status__button
+.detailed-status__button {
+  @include panel-button;
+}
+
 .status__relative-time,
 .detailed-status__datetime {
   &:hover {
@@ -1121,22 +1035,9 @@ a.status-card {
   }
 }
 
-.notification,
+// Polyam: Split from .notifaction, .status__wrapper
 .status__wrapper {
-  position: relative;
-
-  &.unread {
-    &::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      inset-inline-start: 0;
-      width: 100%;
-      height: 100%;
-      border-inline-start: 4px solid $highlight-text-color;
-      pointer-events: none;
-    }
-  }
+  @include notification-status-wrapper;
 }
 
 .picture-in-picture {
