[Polyam] Further reduce pointless CSS differences with upstream
Port 8c9341a67bd6a84d07d6e1907fa85a75d682e29b to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/buttons.scss
+++ b/app/javascript/flavours/polyam/styles/components/buttons.scss
@@ -375,12 +375,12 @@ button.icon-button.active .icon-retweet {
   z-index: 100;
 
   &--minified {
-    display: flex; // glitch: media icon in spoiler button
+    display: flex; // Polyam: sensitive marker in images
     inset-inline-start: 4px;
     top: 4px;
     width: auto;
     height: auto;
-    align-items: center; // glitch: media icon in spoiler button
+    align-items: center; // Polyam: sensitive marker in images
   }
 
   &--click-thru {
