--- a/app/javascript/flavours/polyam/styles/components/status.scss
+++ b/app/javascript/flavours/polyam/styles/components/status.scss
@@ -366,6 +366,7 @@
   font-size: 15px;
   padding-bottom: 10px;
   display: flex;
+  align-items: start; // glitch: changed because of our different layout
   justify-content: space-between;
   gap: 10px;
   cursor: pointer;
@@ -537,7 +538,7 @@
   .media-gallery,
   .video-player,
   .audio-player {
-    margin-top: 8px;
+    margin-top: 8px; // glitch: reduced margins
   }
 
   .status__prepend {
