--- a/app/javascript/flavours/polyam/styles/components/directory.scss
+++ b/app/javascript/flavours/polyam/styles/components/directory.scss
@@ -22,25 +22,29 @@
   background: $ui-base-color;
 
   &__column {
-    padding: 10px 15px;
-    padding-bottom: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 15px;
   }
 
   .radio-button {
-    display: block;
+    display: flex;
   }
 }
 
 .radio-button {
   font-size: 14px;
   position: relative;
-  display: inline-block;
-  padding: 6px 0;
+  display: inline-flex;
+  align-items: center;
   line-height: 18px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   cursor: pointer;
+  gap: 10px;
+  color: $secondary-text-color;
 
   input[type='radio'],
   input[type='checkbox'] {
@@ -48,21 +52,29 @@
   }
 
   &__input {
-    display: inline-block;
+    display: block;
     position: relative;
-    border: 1px solid $ui-primary-color;
+    border: 2px solid $secondary-text-color;
     box-sizing: border-box;
     width: 18px;
     height: 18px;
     flex: 0 0 auto;
-    margin-inline-end: 10px;
-    top: -1px;
     border-radius: 50%;
-    vertical-align: middle;
 
     &.checked {
-      border-color: lighten($ui-highlight-color, 4%);
-      background: lighten($ui-highlight-color, 4%);
+      border-color: $secondary-text-color;
+
+      &::before {
+        position: absolute;
+        left: 2px;
+        top: 2px;
+        content: '';
+        display: block;
+        border-radius: 50%;
+        width: 10px;
+        height: 10px;
+        background: $secondary-text-color;
+      }
     }
   }
 }
