--- a/app/javascript/flavours/polyam/styles/forms.scss
+++ b/app/javascript/flavours/polyam/styles/forms.scss
@@ -1329,6 +1329,12 @@ code {
         font-weight: 600;
       }
 
+      .hint {
+        display: block;
+        font-size: 14px;
+        color: $darker-text-color;
+      }
+
       .recommended {
         position: absolute;
         margin: 0 4px;
