--- a/app/javascript/flavours/polyam/styles/components/regeneration_indicator.scss
+++ b/app/javascript/flavours/polyam/styles/components/regeneration_indicator.scss
@@ -3,7 +3,8 @@
   font-size: 16px;
   font-weight: 500;
   color: $dark-text-color;
-  background: $ui-base-color;
+  border: 1px solid var(--background-border-color);
+  border-top: 0;
   cursor: default;
   display: flex;
   flex: 1 1 auto;
