--- a/app/javascript/flavours/polyam/styles/components/_mixins.scss
+++ b/app/javascript/flavours/polyam/styles/components/_mixins.scss
@@ -135,8 +135,8 @@
 // Mixin for upstream's .notification__filter-bar, .account__section-headline
 @mixin filter-bar() {
   // deliberate glitch-soc choice for now
-  background: darken($ui-base-color, 4%);
-  border-bottom: 1px solid lighten($ui-base-color, 8%);
+  border: 1px solid var(--background-border-color);
+  border-top: 0;
   cursor: default;
   display: flex;
   flex-shrink: 0;
@@ -174,6 +174,11 @@
         background: $highlight-text-color;
       }
     }
+  }
+
+  .scrollable & {
+    border-left: 0;
+    border-right: 0;
   }
 }
 
