--- a/app/javascript/flavours/polyam/styles/components/columns.scss
+++ b/app/javascript/flavours/polyam/styles/components/columns.scss
@@ -69,6 +69,7 @@ $ui-header-height: 55px;
   z-index: 3;
   justify-content: space-between;
   align-items: center;
+  backdrop-filter: var(--background-filter);
 
   &__logo {
     display: inline-flex;
@@ -117,7 +118,8 @@ $ui-header-height: 55px;
 }
 
 .tabs-bar__wrapper {
-  background: darken($ui-base-color, 8%);
+  background: var(--background-color-tint);
+  backdrop-filter: var(--background-filter);
   position: sticky;
   top: $ui-header-height;
   z-index: 2;
@@ -152,8 +154,15 @@ $ui-header-height: 55px;
   flex-direction: column;
 
   > .scrollable {
-    background: $ui-base-color;
+    border: 1px solid var(--background-border-color);
+    border-top: 0;
     border-radius: 0 0 4px 4px;
+
+    &.about,
+    &.privacy-policy {
+      border-top: 1px solid var(--background-border-color);
+      border-radius: 4px;
+    }
   }
 }
 
@@ -203,7 +212,7 @@ $ui-header-height: 55px;
 // .columns-area--mobile (Moved to single-column.scss by upstream)
 
 .column-link--transparent .icon-with-badge__badge {
-  border-color: darken($ui-base-color, 8%);
+  border-color: var(--background-color);
 }
 
 .column-title {
@@ -494,15 +503,14 @@ $ui-header-height: 55px;
 .column-back-button {
   box-sizing: border-box;
   width: 100%;
-  background: $ui-base-color;
+  background: transparent;
+  border: 1px solid var(--background-border-color);
   border-radius: 4px 4px 0 0;
   color: $highlight-text-color;
   cursor: pointer;
   flex: 0 0 auto;
   font-size: 16px;
   line-height: inherit;
-  border: 0;
-  border-bottom: 1px solid lighten($ui-base-color, 8%);
   text-align: unset;
   padding: 13px;
   margin: 0;
@@ -515,13 +523,17 @@ $ui-header-height: 55px;
   &:hover {
     text-decoration: underline;
   }
+
+  @media screen and (max-width: $no-gap-breakpoint) {
+    border-top: 0;
+  }
 }
 
 .column-header__back-button {
   display: flex;
   align-items: center;
   gap: 5px;
-  background: $ui-base-color;
+  background: transparent;
   border: 0;
   font-family: inherit;
   color: $highlight-text-color;
@@ -558,8 +570,6 @@ $ui-header-height: 55px;
 }
 
 .column-link {
-  background: lighten($ui-base-color, 8%);
-  color: $primary-text-color;
   display: flex;
   align-items: center;
   gap: 5px;
@@ -569,12 +579,18 @@ $ui-header-height: 55px;
   overflow: hidden;
   white-space: nowrap;
   border: 0;
+  background: transparent;
+  color: $secondary-text-color;
   border-left: 4px solid transparent;
 
   &:hover,
   &:focus,
   &:active {
-    background: lighten($ui-base-color, 11%);
+    color: $primary-text-color;
+  }
+
+  &.active {
+    color: $highlight-text-color;
   }
 
   &:focus {
@@ -584,22 +600,6 @@ $ui-header-height: 55px;
   &:focus-visible {
     border-color: $ui-button-focus-outline-color;
     border-radius: 0;
-  }
-
-  &--transparent {
-    background: transparent;
-    color: $secondary-text-color;
-
-    &:hover,
-    &:focus,
-    &:active {
-      background: transparent;
-      color: $primary-text-color;
-    }
-
-    &.active {
-      color: $highlight-text-color;
-    }
   }
 
   &--logo {
@@ -626,8 +626,8 @@ $ui-header-height: 55px;
 }
 
 .column-subheading {
-  background: $ui-base-color;
-  color: $dark-text-color;
+  background: darken($ui-base-color, 4%);
+  color: $darker-text-color;
   padding: 8px 20px;
   font-size: 12px;
   font-weight: 500;
@@ -672,8 +672,7 @@ $ui-header-height: 55px;
 .column-header {
   display: flex;
   font-size: 16px;
-  background: $ui-base-color;
-  border-bottom: 1px solid lighten($ui-base-color, 8%);
+  border: 1px solid var(--background-border-color);
   border-radius: 4px 4px 0 0;
   flex: 0 0 auto;
   cursor: pointer;
@@ -740,6 +739,10 @@ $ui-header-height: 55px;
       padding-top: 16px;
     }
   }
+
+  @media screen and (max-width: $no-gap-breakpoint) {
+    border-top: 0;
+  }
 }
 
 .column-header__buttons {
@@ -759,9 +762,9 @@ $ui-header-height: 55px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: $ui-base-color;
   border: 0;
   color: $darker-text-color;
+  background: transparent;
   cursor: pointer;
   font-size: 16px;
   padding: 0 15px;
@@ -780,7 +783,6 @@ $ui-header-height: 55px;
 
   &.active {
     color: $primary-text-color;
-    background: lighten($ui-base-color, 4%);
 
     &:hover {
       color: $primary-text-color;
@@ -842,7 +844,6 @@ $ui-header-height: 55px;
   max-height: 70vh;
   overflow: hidden;
   overflow-y: auto;
-  border-bottom: 1px solid lighten($ui-base-color, 8%);
   color: $darker-text-color;
   transition:
     max-height 150ms ease-in-out,
@@ -864,7 +865,7 @@ $ui-header-height: 55px;
     height: 0;
     background: transparent;
     border: 0;
-    border-top: 1px solid lighten($ui-base-color, 8%);
+    border-top: 1px solid var(--background-border-color);
     margin: 10px 0;
   }
 
@@ -880,7 +881,8 @@ $ui-header-height: 55px;
 }
 
 .column-header__collapsible-inner {
-  background: $ui-base-color;
+  border: 1px solid var(--background-border-color);
+  border-top: 0;
 }
 
 .column-header__setting-btn {
@@ -1136,7 +1138,6 @@ $ui-header-height: 55px;
 .empty-column-indicator,
 .follow_requests-unlocked_explanation {
   color: $dark-text-color;
-  background: $ui-base-color;
   text-align: center;
   padding: 20px;
   font-size: 15px;
@@ -1163,14 +1164,14 @@ $ui-header-height: 55px;
 
 .follow_requests-unlocked_explanation {
   background: darken($ui-base-color, 4%);
-  border-bottom: 1px solid lighten($ui-base-color, 8%);
+  border-bottom: 1px solid var(--background-border-color);
   contain: initial;
   flex-grow: 0;
 }
 
 .error-column {
   padding: 20px;
-  background: $ui-base-color;
+  border: 1px solid var(--background-border-color);
   border-radius: 4px;
   display: flex;
   flex: 1 1 auto;
@@ -1238,7 +1239,8 @@ $ui-header-height: 55px;
   justify-content: flex-start;
   gap: 15px;
   align-items: center;
-  background: lighten($ui-base-color, 4%);
+  border: 1px solid var(--background-border-color);
+  border-top: 0;
 
   // Polyam: Fix awkward input width
   input {
@@ -1256,7 +1258,7 @@ $ui-header-height: 55px;
 
 .notifications-permission-banner {
   padding: 30px;
-  border-bottom: 1px solid lighten($ui-base-color, 8%);
+  border-bottom: 1px solid var(--background-border-color);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1375,7 +1377,7 @@ $ui-header-height: 55px;
 }
 
 .hashtag-header {
-  border-bottom: 1px solid lighten($ui-base-color, 8%);
+  border-bottom: 1px solid var(--background-border-color);
   padding: 15px;
   font-size: 17px;
   line-height: 22px;
@@ -1410,8 +1412,8 @@ $ui-header-height: 55px;
   gap: 12px;
   padding: 16px 0;
   padding-bottom: 0;
-  border-bottom: 1px solid mix($ui-base-color, $ui-highlight-color, 75%);
-  background: mix($ui-base-color, $ui-highlight-color, 95%);
+  border-bottom: 1px solid var(--background-border-color);
+  background: rgba($ui-highlight-color, 0.05);
 
   &__header {
     display: flex;
@@ -1495,8 +1497,8 @@ $ui-header-height: 55px;
       overflow-x: scroll;
 
       &__card {
-        background: darken($ui-base-color, 4%);
-        border: 1px solid lighten($ui-base-color, 8%);
+        background: var(--background-color);
+        border: 1px solid var(--background-border-color);
         border-radius: 4px;
         display: flex;
         flex-direction: column;
@@ -1533,7 +1535,7 @@ $ui-header-height: 55px;
         .account__avatar {
           flex-shrink: 0;
           align-self: flex-end;
-          border: 1px solid lighten($ui-base-color, 8%);
+          border: 1px solid var(--background-border-color);
           background-color: $ui-base-color;
         }
 
