--- a/app/javascript/flavours/polyam/styles/components/explore.scss
+++ b/app/javascript/flavours/polyam/styles/components/explore.scss
@@ -46,7 +46,7 @@
   color: $primary-text-color;
   text-decoration: none;
   padding: 15px;
-  border-bottom: 1px solid lighten($ui-base-color, 8%);
+  border-bottom: 1px solid var(--background-border-color);
   gap: 15px;
 
   &:last-child {
