--- a/app/javascript/flavours/polyam/styles/components/lists.scss
+++ b/app/javascript/flavours/polyam/styles/components/lists.scss
@@ -78,7 +78,7 @@
 
   .list {
     padding: 10px;
-    border-bottom: 1px solid lighten($ui-base-color, 8%);
+    border-bottom: 1px solid var(--background-border-color);
   }
 
   .list__wrapper {
