--- a/app/javascript/flavours/polyam/styles/components/search.scss
+++ b/app/javascript/flavours/polyam/styles/components/search.scss
@@ -194,7 +194,7 @@
 }
 
 .search-results__section {
-  border-bottom: 1px solid lighten($ui-base-color, 8%);
+  border-bottom: 1px solid var(--background-border-color);
 
   &:last-child {
     border-bottom: 0;
@@ -202,7 +202,7 @@
 
   &__header {
     background: darken($ui-base-color, 4%);
-    border-bottom: 1px solid lighten($ui-base-color, 8%);
+    border-bottom: 1px solid var(--background-border-color);
     padding: 15px;
     font-weight: 500;
     font-size: 14px;
@@ -248,7 +248,7 @@
     display: flex;
     align-items: center;
     padding: 15px;
-    border-bottom: 1px solid lighten($ui-base-color, 8%);
+    border-bottom: 1px solid var(--background-border-color);
     gap: 15px;
 
     &:last-child {
