--- a/app/javascript/flavours/polyam/styles/components/single_column.scss
+++ b/app/javascript/flavours/polyam/styles/components/single_column.scss
@@ -96,8 +96,7 @@
 
     .navigation-panel {
       margin: 0;
-      background: $ui-base-color;
-      border-inline-start: 1px solid lighten($ui-base-color, 8%);
+      border-inline-start: 1px solid var(--background-border-color);
       height: 100vh;
     }
 
@@ -115,8 +114,15 @@
 
   .layout-single-column .ui__header {
     display: flex;
-    background: $ui-base-color;
-    border-bottom: 1px solid lighten($ui-base-color, 8%);
+    background: var(--background-color-tint);
+    border-bottom: 1px solid var(--background-border-color);
+  }
+
+  .column > .scrollable,
+  .tabs-bar__wrapper .column-header,
+  .tabs-bar__wrapper .column-back-button {
+    border-left: 0;
+    border-right: 0;
   }
 
   .column-header,
@@ -227,7 +233,7 @@
     flex: 0 0 auto;
     border: 0;
     background: transparent;
-    border-top: 1px solid lighten($ui-base-color, 4%);
+    border-top: 1px solid var(--background-border-color);
     margin: 10px 0;
   }
 
