--- a/app/javascript/flavours/polyam/styles/components/status.scss
+++ b/app/javascript/flavours/polyam/styles/components/status.scss
@@ -91,7 +91,7 @@
   box-sizing: border-box;
   width: 100%;
   clear: both;
-  border-bottom: 1px solid lighten($ui-base-color, 8%);
+  border-bottom: 1px solid var(--background-border-color);
 
   &__button {
     display: inline;
@@ -112,19 +112,14 @@
 .focusable {
   &:focus {
     outline: 0;
-    background: lighten($ui-base-color, 4%);
-
-    .detailed-status,
-    .detailed-status__action-bar {
-      background: lighten($ui-base-color, 8%);
-    }
+    background: rgba($ui-highlight-color, 0.05);
   }
 }
 
 .status {
   padding: 10px 14px; // glitch: reduced padding
   min-height: 54px;
-  border-bottom: 1px solid lighten($ui-base-color, 8%);
+  border-bottom: 1px solid var(--background-border-color);
   cursor: auto;
 
   @keyframes fade {
@@ -466,10 +461,10 @@
 }
 
 .status__wrapper-direct {
-  background: mix($ui-base-color, $ui-highlight-color, 95%);
+  background: rgba($ui-highlight-color, 0.05);
 
   &:focus {
-    background: mix(lighten($ui-base-color, 4%), $ui-highlight-color, 95%);
+    background: rgba($ui-highlight-color, 0.05);
   }
 
   .status__prepend {
@@ -503,9 +498,8 @@
 }
 
 .detailed-status {
-  background: lighten($ui-base-color, 4%);
   padding: 14px 10px; // glitch: reduced padding
-  border-top: 1px solid lighten($ui-base-color, 8%);
+  border-top: 1px solid var(--background-border-color);
 
   &--flex {
     display: flex;
@@ -563,9 +557,7 @@
   line-height: 18px;
 
   &__line {
-    // Polyam: TODO: var(--background-border-color);
-    border-bottom: 1px solid
-      mix(lighten($ui-base-color, 8%), $ui-highlight-color, 95%);
+    border-bottom: 1px solid var(--background-border-color);
     padding: 8px 0;
     display: flex;
     align-items: center;
@@ -593,9 +585,8 @@
 }
 
 .detailed-status__action-bar {
-  background: lighten($ui-base-color, 4%);
-  border-top: 1px solid lighten($ui-base-color, 8%);
-  border-bottom: 1px solid lighten($ui-base-color, 8%);
+  border-top: 1px solid var(--background-border-color);
+  border-bottom: 1px solid var(--background-border-color);
   display: flex;
   flex-direction: row;
   padding: 8px 0; // glitch: reduced padding
@@ -725,7 +716,7 @@
   position: relative;
   display: flex;
   font-size: 14px;
-  border: 1px solid lighten($ui-base-color, 8%);
+  border: 1px solid var(--background-border-color);
   border-radius: 8px;
   color: $darker-text-color;
   margin-top: 14px;
@@ -992,7 +983,7 @@ a.status-card {
 .attachment-list {
   display: flex;
   font-size: 14px;
-  border: 1px solid lighten($ui-base-color, 8%);
+  border: 1px solid var(--background-border-color);
   border-radius: 4px;
   margin-top: 14px; // glitch: reduced margins
   overflow: hidden;
@@ -1002,7 +993,7 @@ a.status-card {
     color: $dark-text-color;
     padding: 8px 18px;
     cursor: default;
-    border-inline-end: 1px solid lighten($ui-base-color, 8%);
+    border-inline-end: 1px solid var(--background-border-color);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1118,7 +1109,7 @@ a.status-card {
 
 .picture-in-picture-placeholder {
   box-sizing: border-box;
-  border: 2px dashed lighten($ui-base-color, 8%);
+  border: 2px dashed var(--background-border-color);
   background: $base-shadow-color;
   display: flex;
   flex-direction: column;
