[Polyam] Change design of metadata underneath posts in web UI
Port 4991198b703f5020ab136062fe7d5ef44e8f0aec to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/dropdown.scss
+++ b/app/javascript/flavours/polyam/styles/components/dropdown.scss
@@ -91,6 +91,10 @@
       outline: 1px dotted;
     }
 
+    &:hover {
+      text-decoration: underline;
+    }
+
     .icon {
       width: 12px;
       height: 12px;
