--- a/app/javascript/flavours/polyam/styles/components/status.scss
+++ b/app/javascript/flavours/polyam/styles/components/status.scss
@@ -557,15 +557,38 @@
 }
 
 .detailed-status__meta {
-  margin-top: 16px;
+  margin-top: 24px;
   color: $dark-text-color;
   font-size: 14px;
   line-height: 18px;
 
+  &__line {
+    // Polyam: TODO: var(--background-border-color);
+    border-bottom: 1px solid
+      mix(lighten($ui-base-color, 8%), $ui-highlight-color, 95%);
+    padding: 8px 0;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+
+    &:first-child {
+      padding-top: 0;
+    }
+
+    &:last-child {
+      padding-bottom: 0;
+      border-bottom: 0;
+    }
+  }
+
+  // Polyam: Different icon size as large icons look weird
   .icon {
     width: 14px;
     height: 14px;
-    vertical-align: middle;
+  }
+
+  .animated-number {
+    color: $secondary-text-color;
   }
 }
 
@@ -609,20 +632,6 @@
   color: inherit;
   text-decoration: none;
   gap: 6px;
-  position: relative;
-  top: 0.145em;
-
-  .icon {
-    top: 0;
-  }
-}
-
-.detailed-status__favorites,
-.detailed-status__reblogs,
-.detailed-status__reactions {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 18px;
 }
 
 // Polyam: Split from class also containing .account__display-name
