[Polyam] Change mute, block and domain block confirmations in web UI
Port ec19d0a14bd8f5e76293ca52cf67972e01c2135f to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/buttons.scss
+++ b/app/javascript/flavours/polyam/styles/components/buttons.scss
@@ -84,17 +84,17 @@
   }
 
   &.button-secondary {
-    color: $ui-button-secondary-color;
+    color: $highlight-text-color;
     background: transparent;
     padding: 6px 17px;
-    border: 1px solid $ui-button-secondary-border-color;
+    border: 1px solid $highlight-text-color;
 
     &:active,
     &:focus,
     &:hover {
-      border-color: $ui-button-secondary-focus-background-color;
-      color: $ui-button-secondary-focus-color;
-      background-color: $ui-button-secondary-focus-background-color;
+      border-color: lighten($highlight-text-color, 4%);
+      color: lighten($highlight-text-color, 4%);
+      background-color: transparent;
       text-decoration: none;
     }
 
