--- a/app/javascript/flavours/polyam/styles/components/directory.scss
+++ b/app/javascript/flavours/polyam/styles/components/directory.scss
@@ -28,7 +28,8 @@
   }
 }
 
-.radio-button {
+.radio-button,
+.check-box {
   font-size: 14px;
   position: relative;
   display: inline-flex;
@@ -47,17 +48,19 @@
   }
 
   &__input {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
     border: 2px solid $secondary-text-color;
     box-sizing: border-box;
-    width: 18px;
-    height: 18px;
+    width: 20px;
+    height: 20px;
     flex: 0 0 auto;
     border-radius: 50%;
 
     &.checked {
-      border-color: $secondary-text-color;
+      border-color: $ui-highlight-color;
 
       &::before {
         position: absolute;
@@ -66,9 +69,31 @@
         content: '';
         display: block;
         border-radius: 50%;
-        width: 10px;
-        height: 10px;
-        background: $secondary-text-color;
+        width: 12px;
+        height: 12px;
+        background: $ui-highlight-color;
+      }
+    }
+
+    .icon {
+      width: 18px;
+      height: 18px;
+    }
+  }
+}
+
+.check-box {
+  &__input {
+    width: 18px;
+    height: 18px;
+    border-radius: 2px;
+
+    &.checked {
+      background: $ui-highlight-color;
+      color: $white;
+
+      &::before {
+        display: none;
       }
     }
   }
