--- a/app/views/admin/roles/_form.html.haml
+++ b/app/views/admin/roles/_form.html.haml
@@ -28,15 +28,21 @@
             .account-role{ class: "user-role-#{form.object.id}", id: 'user-role-preview-1' }
               = person_icon
               %span= form.object.name
+              - unless current_user.setting_flavour == 'polyam'
+                %span.account-role__domain= current_user.account.local_username_and_domain.split('@')[1]
           .item.light
             .account-role{ class: "user-role-#{form.object.id}", id: 'user-role-preview-2' }
               = person_icon
               %span= form.object.name
+              - unless current_user.setting_flavour == 'polyam'
+                %span.account-role__domain= current_user.account.local_username_and_domain.split('@')[1]
           - if current_user.setting_skin != 'default' && current_user.setting_skin != 'mastodon-light'
-            .item.account__header__bar
+            .item.account__header.account_header_badges
               .account-role{ class: "user-role-#{form.object.id}", id: 'user-role-preview-3' }
                 = person_icon
                 %span= form.object.name
+                - unless current_user.setting_flavour == 'polyam'
+                  %span.account-role__domain= current_user.account.local_username_and_domain.split('@')[1]
   %hr.spacer/
 
   .fields-group
